--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,7 +1,17 @@
+= image_tag @post.image.url(:medium)
 %h1= @post.title
 %p= "Criado por: " + " #{@post.user.name} "
 %p= @post.link
 %p= @post.description
+
+#comment
+  %h2.comment_count= pluralize(@post.comments.count, "Comentario")
+  - @comments.each do |comment|
+    .comment
+      %p.username= comment.user.name
+      %p.content= comment.content
+
+  = render 'comments/form'
 
 
 = link_to "Voltar", root_path
