--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -3,6 +3,15 @@
 %p= "Criado por: " + " #{@post.user.name} "
 %p= @post.link
 %p= @post.description
+%p
+  = @post.get_upvotes.size
+  Gostei
+%p
+  = @post.get_downvotes.size
+  Não Gostei
+= link_to "Gostei", curtir_post_path(@post), method: :get
+= link_to "Não Gostei", descurtir_post_path(@post), method: :get
+
 
 #comment
   %h2.comment_count= pluralize(@post.comments.count, "Comentario")
