--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -2,6 +2,6 @@
   = f.input :image
   = f.input :title
   = f.input :link
-  = f.input :description
+  = f.text_area :description, size: "60x12"
 
   = f.button :submit
