--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,9 +1,38 @@
-- @posts.each do |post|
-  = link_to (image_tag post.image.url(:small)), post
-  %h2= link_to post.title, post
-  %p
-    = post.comments.count
-    Comentarios
-  %p
-    = post.get_likes.size
-    Curtida
+- if user_signed_in?
+  %p#intro
+    Bem vindo
+    = current_user.name
+    %br/
+  %p#intro
+
+    %span
+      Compartilhe suas Inspirações e Inspire seus amigos.
+- else
+  %p#intro
+    Mostre seu Talento
+    %br/
+    %span
+      Compartilhe suas Inspirações e Inspire seus amigos.
+
+#posts
+  - @posts.each do |post|
+    .post
+      .post_image
+        = link_to (image_tag post.image.url(:small)), post
+      .post_content
+        .title
+          %h2= link_to post.title, post
+        .data.clearfix
+          %p.username
+            Criado por
+            = post.user.name
+          %p.buttons
+            %span
+              %i.fa.fa-comments-o
+              = post.comments.count
+            %span
+              %i.fa.fa-thumbs-o-up
+              = post.get_likes.size
+            %span
+              %i.fa.fa-thumbs-o-down
+              = post.get_dislikes.size
