--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -6,15 +6,16 @@
   %p#intro
 
     %span
-      Compartilhe suas Inspirações e Inspire seus amigos.
+      Compartilhe seus Projetos e Inspire seus amigos.
 - else
   %p#intro
     Mostre seu Talento
     %br/
     %span
-      Compartilhe suas Inspirações e Inspire seus amigos.
+      Compartilhe seus Projetos e Inspire seus amigos.
 
 #posts
+  = will_paginate @posts, previous_label: "Antigo", next_label: "Recente", inner_window: 1, outer_window: 0
   - @posts.each do |post|
     .post
       .post_image
