--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -1,5 +1,5 @@
 = simple_form_for @post do |f|
-  = f.input :image
+  = f.input :image, hit: "Image"
   = f.input :title
   = f.input :link
   = f.text_area :description, size: "60x12"
