--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -1,5 +1,6 @@
-%h2 Adicionar Nova Inspiração
+.form_main
+  %h2 Adicionar Nova Inspiração
 
-= render 'form'
+  = render 'form'
 
-= link_to "Voltar", root_path
+  = link_to "Voltar", root_path
