--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,25 @@
-<h2>Sign up</h2>
+<div class="form_main">
+
+
+<h2>Cadastrar</h2>
+
+
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :name, required: true, autofocus: true %>
-    <%= f.input :email, required: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-    <%= f.input :password_confirmation, required: true %>
+    <%= f.text_field :name, placeholder: "Nome Completo",  required: true, autofocus: true %>
+    <%= f.text_field :email, placeholder: "Email",  required: true %>
+    <%= f.text_field :password, placeholder: "Password", required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
+    <%= f.text_field :password_confirmation, placeholder: "Confirme o password", required: true %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, "Cadastrar" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+</div>
