--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
   = javascript_include_tag 'application'
   %link{:rel => "stylesheet", :href => "http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css"}
   %link{:rel => "stylesheet", :href => "http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"}
-  = yield :head
+  = yield :title
   = csrf_meta_tags
 %body
   - if notice
@@ -29,5 +29,5 @@
           = link_to "Cadastrar", new_user_registration_path, class: "button"
 
   .wrapper
-    
+
     =yield
